# GitHubCrawler

./: .env.sample  README.md  pyproject.toml
src/: main.py  settings.py
src/api/: routes.py
src/api/endpoints/: crawler_endpoints.py
src/exceptions/: crawler_exceptions.py
src/schema/: github_crawler_schema.py
src/services/: github_crawler_service.py  http_service.py
tests/: conftest.py  test_github_crawler_service.py
